--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,7 +98,7 @@ jobs:
         if: github.event.release.prerelease == false
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           file: Dockerfile
           tags: |-
             ghcr.io/${{ github.repository_owner }}/server:${{ steps.tags.outputs.patch }},
@@ -113,7 +113,7 @@ jobs:
         if: github.event.release.prerelease == true
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           file: Dockerfile
           tags: |-
             ghcr.io/${{ github.repository_owner }}/server:${{ steps.tags.outputs.patch }},
